[package]
name = "suhree"
version = "0.1.5"
description = "suhree — taskbar farming desktop pet with stealth raids"
authors = ["suhree"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
